--- a/basic/basic-layout-8.html
+++ b/basic/basic-layout-8.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="../style.css">
     <style>
       /* Doe hier jouw ding! */
+main{max-width: 30em;
+  margin: auto;
+
+}
+
     </style>
   </head>
   <body id="basic-layout-8">
