--- a/basic/basic-layout-4.html
+++ b/basic/basic-layout-4.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="../style.css">
     <style>
       /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        
+        grid-template-columns:1fr 1fr 1fr 1fr 1fr ;
+         grid-template-rows: 1fr 1fr;
+         gap: 5px;
+
+
+
+      }
+
+
+      header{
+        grid-row-start: 1;
+        grid-row-end:2;
+        grid-column: 1/5;
+
+
+    }
+
+
+    nav{ 
+      grid-column-start:5 ;
+    grid-column-end:-1;
+  
+  }
+
+  main{
+    grid-column-start:1 ;
+     grid-column-end:5 ;
+  }
+
     </style>
   </head>
   <body id="basic-layout-4">
