--- a/basic/basic-layout-6.html
+++ b/basic/basic-layout-6.html
@@ -7,6 +7,39 @@
     <link rel="stylesheet" href="../style.css">
     <style>
       /* Doe hier jouw ding! */
+
+body{
+  display:grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap:10px;
+}
+header{ 
+  grid-column-start:1 ;
+  grid-column-end:4;
+}
+nav{
+
+  grid-column-start:1;
+  grid-column-end: 1;
+  grid-row-start: 2;
+  grid-row-end:5;
+}
+
+main{
+
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start:2 ;
+  grid-row-end:5;
+}
+footer{
+  grid-row-start: 1;
+  grid-row-end:5;
+
+ 
+}
+
     </style>
   </head>
   <body id="basic-layout-6">
