--- a/basic/basic-layout-7.html
+++ b/basic/basic-layout-7.html
@@ -8,13 +8,22 @@
     <style>
       main {
         padding: 1em;
+        height: 500px;
+        font-size: large;
       }
       nav {
         min-height: 5em;
+        float: right;
+        height:400px;
+        width: 200px;
       }
       p {
         margin: 0;
       }
+
+
+
+
       
       /* Doe hier jouw ding! */
     </style>
@@ -22,7 +31,9 @@
   <body id="basic-layout-7">
     <main>
       <nav><a href="../index.html">Terug naar het overzicht</a></nav>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip Lorem ipsum dolor sit amet, 
+        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea  ex ea  commodo consequat. Duis aute irure dolor
+         in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </main>
   </body>
 </html>
